--- a/src/main/resources/templates/make-prediction.html
+++ b/src/main/resources/templates/make-prediction.html
@@ -10,8 +10,8 @@
 </nav>
 <div layout:fragment="content" class="col-md-8">
     <form action="#" th:action="@{/prediction/save}" method="POST" th:object="${matchesList}" th:if="${#authentication.name != 'anonymousUser'}">
-        <div class="panel panel-default">
-            <div class="panel-heading" th:text="'Матчи (Тур - ' + ${tour} + ')'">Матчи</div>
+        <div class="panel panel-default" th:each="divMatches, divStatus : *{matches}" th:if="${divMatches.size() > 0}">
+            <div class="panel-heading" th:text="${divStatus.index + 1} + '-й Дивизион' + ' - Матчи (Тур - ' + ${tour} + ') '">Матчи</div>
             <div class="panel-body">
                 <table class="table table-bordered table-responsive" id="teams-table">
                     <thead>
@@ -23,17 +23,17 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr th:each="match, status : *{matches}">
-                        <input type="hidden" th:field="*{matches[__${status.index}__].id}"/>
+                    <tr th:each="match, status : *{matches[__${divStatus.index}__]}">
+                        <input type="hidden" th:field="*{matches[__${divStatus.index}__][__${status.index}__].id}"/>
                         <td th:text="${match.ownerTeamName}">
                         </td>
                         <td>
                             <input type="text"
-                                   class="form-control" th:field="*{matches[__${status.index}__].ownerScoreS}"/>
+                                   class="form-control" th:field="*{matches[__${divStatus.index}__][__${status.index}__].ownerScoreS}"/>
                         </td>
                         <td>
                             <input type="text"
-                                   class="form-control" th:field="*{matches[__${status.index}__].guestScoreS}"/>
+                                   class="form-control" th:field="*{matches[__${divStatus.index}__][__${status.index}__].guestScoreS}"/>
                         </td>
                         <td th:text="${match.guestTeamName}"></td>
                     </tr>
@@ -59,6 +59,13 @@
         <div class="panel-body">
             <p th:each="puser : ${usersTable}" th:text="${puser.text}">
             </p>
+        </div>
+    </div>
+    <div class="panel panel-default">
+        <div class="panel-heading">Правила игры</div>
+        <div class="panel-body">
+            <a href="/blog/prognozy">Как сделать прогноз - Инструкция</a>
+            <p>Менеджеры оставляют на сайте прогнозы на матчи будущего тура. По итогам тура сравниваются прогнозы и результаты матчей. За угаданный исход менеджеру начисляется 1 балл, за разницу мячей 2 балла, за угаданный счет - 4 балла. В конце сезона подводится общий итог.</p>
         </div>
     </div>
 </div>
